--- a/index.html
+++ b/index.html
@@ -421,3 +421,206 @@
                 <label for="signer_surnames_1">Surnames</label>
                 <input type="text" id="signer_surnames_1" name="signer_surnames_1">
             </div>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group dob-field">
+                 <label for="signer_dob_1">Date of birth</label>
+                 <input type="date" id="signer_dob_1" name="signer_dob_1">
+            </div>
+            <div class="form-group address-field">
+                 <label for="signer_res_address_1">Residential address</label>
+                 <input type="text" id="signer_res_address_1" name="signer_res_address_1">
+            </div>
+        </div>
+
+        <div class="form-row">
+             <div class="form-group">
+                 <label for="signer_res_city_1">City</label>
+                 <input type="text" id="signer_res_city_1" name="signer_res_city_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_res_state_1">State / Province</label>
+                 <input type="text" id="signer_res_state_1" name="signer_res_state_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_res_zip_1">ZIP code</label>
+                 <input type="text" id="signer_res_zip_1" name="signer_res_zip_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_res_country_1">Country</label>
+                 <input type="text" id="signer_res_country_1" name="signer_res_country_1">
+             </div>
+        </div>
+
+         <div class="form-row">
+            <div class="form-group id-num-field"> <label for="primary_id_number_1">Primary identification number</label>
+                 <input type="text" id="primary_id_number_1" name="primary_id_number_1">
+            </div>
+            <div class="form-group id-type-explain-group"> <div class="form-group"> <label for="primary_id_type_1">Type of identification</label>
+                     <select id="primary_id_type_1" name="primary_id_type_1">
+                         <option value="">-- Select Type --</option>
+                         <option value="passport">Passport</option>
+                         <option value="driver_license">Driver's License</option>
+                         <option value="national_id">National ID</option>
+                          <option value="foreign_id">Foreign ID</option>
+                         <option value="other">Other</option>
+                     </select>
+                 </div>
+                 <div class="form-group"> <label for="primary_id_other_explain_1">If other, please explain</label>
+                      <input type="text" id="primary_id_other_explain_1" name="primary_id_other_explain_1">
+                 </div>
+             </div>
+         </div>
+
+        <div class="form-row">
+            <div class="form-group">
+                <label for="primary_id_exp_date_1">Expiration date</label>
+                <input type="date" id="primary_id_exp_date_1" name="primary_id_exp_date_1">
+            </div>
+            <div class="form-group issuing-country-field">
+                <label for="primary_id_issuing_country_1">Issuing country</label>
+                <input type="text" id="primary_id_issuing_country_1" name="primary_id_issuing_country_1">
+            </div>
+             <div class="form-group" style="flex-grow: 1;"></div> </div>
+
+         <div class="form-row">
+             <div class="static-label-group"> <span>Are you politicaly exposed person?</span>
+             </div>
+             <div class="radio-group"> <input type="radio" id="pep_yes_1" name="pep_status_1" value="yes">
+                 <label for="pep_yes_1">Yes</label>
+             </div>
+             <div class="radio-group"> <input type="radio" id="pep_no_1" name="pep_status_1" value="no" checked> <label for="pep_no_1">No</label>
+             </div>
+             <div class="form-group" style="flex-basis: 5px; flex-grow: 0;"></div> <div class="static-label-group"> <span>If Yes:</span>
+             </div>
+             <div class="form-group">
+                 <label for="pep_position_1">Position</label>
+                 <input type="text" id="pep_position_1" name="pep_position_1">
+             </div>
+             <div class="form-group">
+                 <label for="pep_relation_1">Relation</label>
+                 <input type="text" id="pep_relation_1" name="pep_relation_1">
+             </div>
+             <div class="form-group">
+                 <label for="pep_country_1">Country</label>
+                 <input type="text" id="pep_country_1" name="pep_country_1">
+             </div>
+         </div>
+
+        <h3>SECTION II - To be completed only by the signers of the account.</h3>
+
+         <div class="form-row">
+             <div class="form-group">
+                 <label for="signer_marital_1">Marital status</label>
+                  <select id="signer_marital_1" name="signer_marital_1">
+                      <option value="">-- Select Status --</option>
+                      <option value="single">Single</option>
+                      <option value="married">Married</option>
+                      <option value="divorced">Divorced</option>
+                      <option value="widowed">Widowed</option>
+                      <option value="separated">Separated</option>
+                  </select>
+             </div>
+             <div class="form-group">
+                 <label for="signer_nationality_1">Nationality</label>
+                 <input type="text" id="signer_nationality_1" name="signer_nationality_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_other_nationality_1">Other nationality</label>
+                 <input type="text" id="signer_other_nationality_1" name="signer_other_nationality_1">
+             </div>
+         </div>
+
+        <div class="form-row">
+            <div class="form-group id-num-field"> <label for="secondary_id_number_1">Secondary identification number</label>
+                 <input type="text" id="secondary_id_number_1" name="secondary_id_number_1">
+            </div>
+            <div class="form-group id-type-explain-group"> <div class="form-group"> <label for="secondary_id_type_1">Type of identification</label>
+                     <select id="secondary_id_type_1" name="secondary_id_type_1">
+                          <option value="">-- Select Type --</option>
+                         <option value="passport">Passport</option>
+                         <option value="driver_license">Driver's License</option>
+                         <option value="national_id">National ID</option>
+                          <option value="foreign_id">Foreign ID</option>
+                         <option value="other">Other</option>
+                     </select>
+                 </div>
+                 <div class="form-group"> <label for="secondary_id_other_explain_1">If other, please explain</label>
+                      <input type="text" id="secondary_id_other_explain_1" name="secondary_id_other_explain_1">
+                 </div>
+             </div>
+        </div>
+
+        <div class="form-row">
+             <div class="form-group">
+                 <label for="secondary_id_exp_date_1">Expiration date</label>
+                 <input type="date" id="secondary_id_exp_date_1" name="secondary_id_exp_date_1">
+             </div>
+             <div class="form-group issuing-country-field">
+                 <label for="secondary_id_issuing_country_1">Issuing country</label>
+                 <input type="text" id="secondary_id_issuing_country_1" name="secondary_id_issuing_country_1">
+             </div>
+            <div class="form-group mailing-address-section2">
+                <label for="signer_mailing_address_1">Mailing address (if different from residential address)</label>
+                <input type="text" id="signer_mailing_address_1" name="signer_mailing_address_1">
+            </div>
+        </div>
+
+         <div class="form-row">
+             <div class="form-group">
+                 <label for="signer_mailing_details_1">City, State, ZIP code, Country</label>
+                 <input type="text" id="signer_mailing_details_1" name="signer_mailing_details_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_res_tel_1">Residential telephone No.</label>
+                 <input type="tel" id="signer_res_tel_1" name="signer_res_tel_1">
+             </div>
+             <div class="form-group">
+                 <label for="signer_alt_tel_1">Alternate telephone No.</label>
+                 <input type="tel" id="signer_alt_tel_1" name="signer_alt_tel_1">
+             </div>
+              <div class="form-group">
+                 <label for="signer_email_1">Email</label>
+                 <input type="email" id="signer_email_1" name="signer_email_1">
+             </div>
+         </div>
+
+        </form>
+
+    <script>
+        // --- Funciones JavaScript para añadir/quitar filas (sin cambios) ---
+        function removeRow(buttonElement) {
+            const row = buttonElement.closest('tr');
+            if (row) {
+                row.remove();
+            }
+        }
+        function addShareholderRow() {
+            const tableBody = document.getElementById('shareholders-body');
+            const newRow = document.createElement('tr');
+            newRow.innerHTML = `
+                <td><input type="text" name="shareholder_name[]"></td>
+                <td><input type="text" name="shareholder_shares[]"></td>
+                <td class="action-column">
+                    <button type="button" class="remove-row-btn" onclick="removeRow(this)">Remove</button>
+                </td>
+            `;
+            tableBody.appendChild(newRow);
+        }
+        function addDirectorRow() {
+            const tableBody = document.getElementById('directors-body');
+            const newRow = document.createElement('tr');
+            newRow.innerHTML = `
+                <td><input type="text" name="director_name[]"></td>
+                <td><input type="text" name="director_position[]"></td>
+                <td class="action-column">
+                    <button type="button" class="remove-row-btn" onclick="removeRow(this)">Remove</button>
+                </td>
+            `;
+            tableBody.appendChild(newRow);
+        }
+        // --- Fin Funciones JavaScript ---
+    </script>
+</div> </body>
+</html>
